[tool.poetry]
name = "APP"
version = "v0.1.11"
description = "A backend for frontend that servers data from the blockchain"
authors = ["Velodrome Team",]

[tool.poetry.dependencies]
python = "^3.9"
wsgi-request-logger = "0.4.6"
versiontools = "1.9.1"
falcon = "3.1"
falcon-compression = "0.2.1"
bjoern = "3.2.1"
web3 = "5.27.0"
multicall = "0.6.2"
redis = "4.2.2"
fakeredis = "1.7.4"
walrus = "0.9.1"
honeybadger = "0.8.0"
python-environ = "0.4.54"
black = "^22.8.0"
flake8 = "^5.0.4"

[tool.poetry.scripts]
api-start = 'app.app:main'
api-sync = 'app.pairs.syncer:sync_forever'
api-sync-once = 'app.pairs.syncer:sync'
api-test = 'app.tests:run'

[build-system]
requires = ["poetry>=1.2.1"]
build-backend = "poetry.masonry.api"
